[package]
name = "Ruten"
version = "0.3.0"
authors = ["Kyiro <github.com/Kyiro>"]
edition = "2018"

[dependencies]
actix-web = "3"
chrono = "0.4"
futures = "0.3"
include-crypt = { version = "0.1", features = ["compression"] }
jector = { git = "https://github.com/lewisclark/jector" }
fs_extra = "1.2.0"
log = "0.4"
nanoid = "0.4.0"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9.6"
sha2 = "0.9.5"
sysinfo = "0.18.2"
tokio = { version = "1", features = ["full"] }